--- a/css/index.css
+++ b/css/index.css
@@ -262,8 +262,12 @@ canvas {
   height: 50px;
 }
 
-#game-info {
-  margin-left: 100px;
+#duck-game-info {
+  margin: 10px;
+}
+
+#games-container {
+  background-color: #AFEEEE;
 }
 
 
