--- a/css/index.css
+++ b/css/index.css
@@ -258,8 +258,7 @@ canvas {
 }
 
 #duck-score-image {
-  width: 50px;
-  height: 50px;
+  display: none;
 }
 
 #duck-game-info {
@@ -269,6 +268,29 @@ canvas {
 #games-container {
   background-color: #AFEEEE;
 }
+
+#flower-for-duck-score-image {
+  display: none;
+}
+
+#play-duck-game {
+  border-radius: 12px;
+  background-color:blue;
+  border: none;
+  color: violet;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+
+
+
+
 
 
 /* Home */
