--- a/_includes/layouts/kids.njk
+++ b/_includes/layouts/kids.njk
@@ -452,7 +452,7 @@ document.addEventListener("DOMContentLoaded", (event) => {
 <div id="a-duck-strikes-back-game-section">
   <div id="duck-game">
     <center>
-      <h2>Revenge of the Ducks: A Duck Strikes Back</h2>
+      <h2 id="duck-game-title">Revenge of the Ducks: A Duck Strikes Back</h2>
       <div id="duck-game-info">
           {% image "./img/duck.png", "a cunning duck", "100vw", "duck-score-image", "png", "../img" %}
           {% image "./img/flower.jpeg", "a mysterious glowing flower", "100vw", "flower-for-duck-score-image", "jpeg", "../img", [25, 25] %}
