--- a/_includes/layouts/kids.njk
+++ b/_includes/layouts/kids.njk
@@ -456,7 +456,7 @@ document.addEventListener("DOMContentLoaded", (event) => {
       <div id="duck-game-info">
           {% image "./img/duck.png", "a cunning duck", "100vw", "duck-score-image", "png", "../img" %}
           {% image "./img/flower.jpeg", "a mysterious glowing flower", "100vw", "flower-for-duck-score-image", "jpeg", "../img", [25, 25] %}
-        <button type="button" id="play-duck-game">Play</button>
+        <button type="button" id="play-duck-game" class="blue-button">Play</button>
         <br />
         <p id="score"></p>
       </div>
@@ -487,7 +487,7 @@ document.addEventListener("DOMContentLoaded", (event) => {
             </tr>
         </table>
         <span>
-            <button id="play-button" onclick="">
+            <button id="play-button" onclick="" class="blue-button">
                 Play
             </button>
         </span>
